# Stouse

./: .env.example  .gitignore  Dockerfile  PRD  README.md  alembic.ini  docker-compose.yml  pyproject.toml
vibehouse/: config.py  main.py
vibehouse/api/: deps.py  middleware.py  ws.py
vibehouse/api/v1/: admin.py  auth.py  board.py  change_orders.py  dashboard.py  designs.py  disputes.py  documents.py  invitations.py  notifications.py  payments.py  permits.py  photos.py  projects.py  reports.py  router.py  timeline.py  vendors.py  websocket.py  ws.py
vibehouse/common/: enums.py  events.py  exceptions.py  logging.py  pagination.py  security.py
vibehouse/core/disputes/: schemas.py  service.py  workflow.py
vibehouse/core/notifications/: __init__.py  service.py
vibehouse/db/: base.py  session.py
vibehouse/integrations/: __init__.py  ai_client.py  base.py  maps.py  sendgrid.py  storage.py  stripe_client.py  trello.py  twilio_client.py
vibehouse/scripts/: seed.py
vibehouse/tasks/: celery_app.py  dispute_tasks.py  report_tasks.py  trello_tasks.py  vendor_tasks.py  vibe_tasks.py
vibehouse/templates/: base.html  budget.html  dashboard.html  designs.html  index.html  login.html  new_project.html  project_detail.html  register.html  settings.html  vendors.html
vibehouse/tests/: conftest.py  test_auth.py  test_change_orders.py  test_dashboard.py  test_designs.py  test_disputes.py  test_invitations.py  test_notifications.py  test_permits.py  test_photos.py  test_projects.py  test_reports.py  test_timeline.py  test_vendors.py  test_webhooks.py
(+42 files in other folders)
